--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,16 @@
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         XML-Atom-Syndication
-version:      0.091
+version:      0.9_01
 version_from: lib/XML/Atom/Syndication.pm
 installdirs:  site
 requires:
-    XML::Parser:                   0
-    XML::Parser::Style::Elemental: 0
-    LWP::Simple:                   0
-    Class::XPath:                  1.4
+    XML::Elemental:                2
+    XML::Writer:                   0.6
+    Test::More:                    0
+    Test:                          0
+    Encode:                        0
+    Class::ErrorHandler:           0
+    MIME::Base64:                  0
 
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.12
