--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,12 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         XML-Atom-Syndication
-version:      0.9_08
+version:      0.9
 version_from: lib/XML/Atom/Syndication.pm
 installdirs:  site
 requires:
     Class::ErrorHandler:           0
-    Encode:                        0
     MIME::Base64:                  0
-    Test:                          0
     Test::More:                    0
     XML::Elemental:                2
     XML::Writer:                   0.6
